# nov-29-16-iot-opensource

./: README.md
Android/: local.properties
Android/app/: build.gradle  proguard-rules.pro
Android/app/src/androidTest/java/eu/execom/misavic/smartcitydemo/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/eu/execom/misavic/smartcitydemo/: SmartCity.java
Android/app/src/main/res/layout/: activity_smart_city.xml
Android/app/src/main/res/values/: colors.xml  strings.xml
Android/app/src/test/java/eu/execom/misavic/smartcitydemo/: ExampleUnitTest.java
Arduino/: LoRasensor.ino
Rpi/: CMakeLists.txt  configure
Rpi/IoTclient/: CMakeLists.txt  IoTclient.cpp
Rpi/IoTclient/core/inc/: Ipc.h  Util.h
Rpi/IoTclient/core/src/: CMakeLists.txt  Ipc.cpp  Util.cpp
Rpi/IoTclient/wolkconnect/inc/: PublishingService.h  WebClient.h
Rpi/IoTclient/wolkconnect/src/: CMakeLists.txt  WebClient.cpp
Rpi/Modules/LoRa/: CMakeLists.txt  LoRa.cpp  MqRouter.cpp~  syncpub.cpp~
Rpi/Modules/LoRa/inc/: LoRaEngine.h
Rpi/Modules/LoRa/src/: CMakeLists.txt  LoRaEngine.cpp
Rpi/lib/: Linux  make_install.sh
Rpi/lib/poco-1.7.5-all/: Makefile
Rpi/lib/poco-1.7.5-all/Serial/.dep/Linux/x86_64/: SerialPort.d
